[HOTFIX] Add settings context processor for Django templates

--- a/srcs/requirements/django/ft_transcendence/templates/index.html
+++ b/srcs/requirements/django/ft_transcendence/templates/index.html
@@ -6,6 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pong</title>
+    <script type="text/javascript">
+        var API_URL = "{{ API_URL }}"
+        var WS_URL = "{{ WS_URL }}"
+        // TODO: 이거 배포할때 없애야함 //
+    </script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <!-- for bootstrap -->
