[DESIGN] Tournament Result design added

--- a/srcs/requirements/django/static/css/style.css
+++ b/srcs/requirements/django/static/css/style.css
@@ -49,6 +49,31 @@
     overflow-y: auto;
 }
 
+#tour_list {
+    max-height: 700px;
+    max-width: 814px;
+    overflow-y: auto;
+    margin: 0 auto;
+}
+
+#tour_list .accordion-item {
+    background-color: transparent;
+}
+
+#tour_list .accordion-button {
+    background-color: transparent;
+    color: white;
+}
+
+#tour_list .accordion-body {
+    background-color: transparent;
+    color: white;
+}
+
+.font_white {
+    color: white;
+}
+
 .game_bg {
     position: relative;
     width: 1440px;
