[FIX] tournament end -> goto mainpage fixed

--- a/srcs/requirements/django/ft_transcendence/templates/index.html
+++ b/srcs/requirements/django/ft_transcendence/templates/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <div class="right-triangle none"></div>
     <div class="co_main co_frame"
         <!-- Title -->
         <div class="title d-flex justify-content-center mt-5">
